--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+
 body {
   margin: 0px;
   min-height: 100vh;
+  font-family: 'IBM Plex Mono', monospace;
 }
 
 .app {
@@ -27,7 +30,7 @@ input {
 }
 
 #board-container {
-  gap: 100px;
+  gap: 40px;
   flex-wrap: wrap;
 }
 
@@ -42,12 +45,72 @@ input {
   width: 40px;
   height: 40px;
   border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
 
 .available-tile:hover {
   cursor: pointer;
+  box-shadow: 1px 1px 6px 0px rgb(0 0 0 / 25%);
+}
+
+.missed {
+  background-color: lightblue;
+}
+
+.boat-position,
+.hit {
+  background-color: lightcoral;
 }
 
 .hide {
   display: none;
+}
+
+.boat-sunk {
+  background-color: red;
+}
+
+#feedback-container {
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 6px 0px rgb(0 0 0 / 25%);
+  width: 70%;
+}
+
+h1,
+p {
+  margin: 0px;
+}
+
+
+.blinker {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  60% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
