--- a/src/style.css
+++ b/src/style.css
@@ -115,3 +115,28 @@ p {
     opacity: 0;
   }
 }
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
+.modal-content {
+  display: flex;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 1px 1px 6px 0px rgb(0 0 0 / 25%);
+  padding: 50px;
+}
+
+.hide {
+  display: none;
+}
