--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,10 @@ button {
   margin: 0px;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 #board-container {
   gap: 40px;
   flex-wrap: wrap;
@@ -129,7 +133,7 @@ p {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -139,11 +143,13 @@ p {
 }
 
 .modal-content {
-  display: flex;
   background-color: white;
   border-radius: 10px;
   box-shadow: 1px 1px 6px 0px rgb(0 0 0 / 25%);
   padding: 50px;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 .hide {
